--- a/package.json
+++ b/package.json
@@ -2,22 +2,24 @@
   "name": "street-learner",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@turf/turf": "^6.5.0",
     "leaflet": "^1.9.0",
-    "@turf/turf": "^6.5.0"
+    "node-fetch": "^3.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^4.0.0",
-    "tailwindcss": "^3.2.0",
-    "postcss": "^8.4.0",
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.2.0",
+    "vite": "^4.0.0"
   }
 }
